Domibus 3.2.2
- Fixed the notifications sent by the JMS plugin
- Changed the default JMX password for WebLogic
Domibus 3.2.1
- JMX access to the JMS queues is secured
- Force the usage of the apache commons IO library from the application
- Possibility to load the log4j configuration from ${domibus.conf.location} for WebLogic/WildFly/Tomcat
Domibus 3.2-FR
- Added authentication/authorization example to the WS default plugin. Disabled by default, to assure backwards compatibility with older versions.
- Added XSD validation of the PMODE when it is uploaded by the user.
- Fixed the filtering and the pagination on the "Message Log" page
- Changed table names to be all UPPERCASE to fix the issue related to case sensitivity on Linux.
- Fixed the download message request issue when the schema validation and MTOM are both enabled.
- Schema validation for all WS operations is enabled by default. MTOM is disabled by default.
- Fixed the filtering and the pagination on the Message Log and the Error Log pages.
- Fixed issue with the signal messages that were not stored/cleared.
- Message Log page is now showing also the signal messages.
- Fixed issue about message delete timestamp not correctly set and MessageRetentionService failing to clear data of downloaded and retained messages.
- Fixed the retry mechanism in the JMS listeners
Domibus 3.2-RC1
- Added XSD validation for the operations exposed by the backend WS
- Harmonize the plugin registration on Tomcat/WebLogic/WildFly
- CRL validation
- Backend WS, interface changed as for operations getMessageStatus and getMessageErrors
- Enabled MTOM for backend WS.
- Ping messages are not stored/delivered to the backend
- Possibility to validate the payload using custom validators
- JMS monitoring via the Admin page
- Added support for dead letter queues
- Added support for Java 8
- Added dynamic hash calculation of config files
- All tests are performed using database and filesystem storage options.
Domibus 3.1.1